<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_dashboard"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnReportIssue"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/report_issue" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:text="@string/Logout" />

</LinearLayout>
