<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_preview"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_issue"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_issue_description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:autofillHints="description" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnPickLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Pick Location" />
        <TextView
            android:id="@+id/txtSelectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No location selected"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>
        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp" />



        <Button
            android:id="@+id/btnSubmitReport"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/submit_report" />


    </LinearLayout>
</ScrollView>
